in/test/math.evs
#memory(
    string_key(0x0000)..string_key(0x232b), // all string keys

    0x300000..0x3fffff // extension
)
// #include("in/core.evs")

#patch(
    // "void_maps",

    "skip_intro",
    // "brian",
    // "camera_hack",
    // "free_graveyard_ids",
    // "save_file_growth",

    // asm
    // "debug_menu", // uses 0x3f0000…???
    // "_hook_input", // 0x3f0000…0x310000
        // "hotkeys", // uses 0x3f00000…???
        // "room_timer", // uses 0x300000…???
    // "_hook_trigger",
)

map flowers(0x38) {
    @install()
    fun trigger_enter() {
        // fade_in();
        // subtext(string("hello world - flowers[END]"));

        <0x0A3F> = 0xefff;

        if(rand(0x01)) {
            eval("00");
        }
        <0x50>[0x10] = randrange(0x05);
        <0x50>[0x10] = rand(0x01);
        <0x50>[0x10] = <0x2a> - 0x10;

        if(dead(<0x2834>)) {
            eval("00");
        }

        // <0x2834>[0x20];

        <0x50>[0x10] = <0x50>[0x10] + 0x01;
        <0x50>[0x10] = <0x50>[0x10];
        <0x50>[0x10] = 0x10;

        <0x2834>[0x10] = <0x2834>[0x20] + 0x10;

        if(<0x2834>[0x20] == 0x00) {
            eval("00");
        }

        if(<0x2834> == 0x00) {
            eval("00");
        }

        <0x2834> = <0x2834>[0x20] + 0x10;
        // error: <0x2834> = 0x10 + <0x2834>[0x20];

        <0x2834> = <0x2834>[0x20];

        <0x2834>[0x20] = 0x11;

        <0x2834> = <0x2834> + 0x02 * 0x02;
        <0x2834> = <0x2834> - 0x02;

        <0x2834> = <0x2834>;
        <0x2258> = <0x2258>;

        <0x2834> = 0x50;

        <0x2834> = 0x01 + 0x01 - 0x02 + 0x01;

        <0x2834> = 0x02 * 0x50 + 0x01;
        // EQUALS(<0x2834, ADD(MUL(0x02, 0x50), 0x01))
        //      MUL(0x02, 0x50) = 0xA0
        //      ADD(0xA0, 0x01) = 0xA1
        //      EQUALS(<0x2834>, 0xA1)

        <0x2834> = 0x01 + 0x50 * 0x02;
        // EQUALS(<0x2834, ADD(0x01, MUL(0x02, 0x50))
        //      MUL(0x02, 0x50) = 0xA0
        //      ADD(0x01, 0xA0) = 0xA1
        //      EQUALS(<0x2834>, 0xA1)
    }
};
